update banner style to prevent scroll on ios and recenter logo. Include logic that opens menu when user tries to scoll on mobile

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -5,12 +5,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    position: fixed;
 }
 
 .banner-logo-container {
     width: 350px;
     z-index: 100;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
 }
 
 .banner-logo {
